--- a/src/app/project-structure/root/components/basic-jqwidgets-form/basic-jqwidgets-form.component.html
+++ b/src/app/project-structure/root/components/basic-jqwidgets-form/basic-jqwidgets-form.component.html
@@ -1,4 +1,4 @@
-/***
+<!-- /***
  *    ██████╗  █████╗ ███████╗██╗ ██████╗
  *    ██╔══██╗██╔══██╗██╔════╝██║██╔════╝
  *    ██████╔╝███████║███████╗██║██║
@@ -6,12 +6,12 @@
  *    ██████╔╝██║  ██║███████║██║╚██████╗
  *    ╚═════╝ ╚═╝  ╚═╝╚══════╝╚═╝ ╚═════╝
  *
- *    ██╗  ██╗███████╗███╗   ██╗██████╗  ██████╗
- *    ██║ ██╔╝██╔════╝████╗  ██║██╔══██╗██╔═══██╗
- *    █████╔╝ █████╗  ██╔██╗ ██║██║  ██║██║   ██║
- *    ██╔═██╗ ██╔══╝  ██║╚██╗██║██║  ██║██║   ██║
- *    ██║  ██╗███████╗██║ ╚████║██████╔╝╚██████╔╝
- *    ╚═╝  ╚═╝╚══════╝╚═╝  ╚═══╝╚═════╝  ╚═════╝
+ *         ██╗ ██████╗ ██╗    ██╗██╗██████╗  ██████╗ ███████╗████████╗███████╗
+ *         ██║██╔═══██╗██║    ██║██║██╔══██╗██╔════╝ ██╔════╝╚══██╔══╝██╔════╝
+ *         ██║██║   ██║██║ █╗ ██║██║██║  ██║██║  ███╗█████╗     ██║   ███████╗
+ *    ██   ██║██║▄▄ ██║██║███╗██║██║██║  ██║██║   ██║██╔══╝     ██║   ╚════██║
+ *    ╚█████╔╝╚██████╔╝╚███╔███╔╝██║██████╔╝╚██████╔╝███████╗   ██║   ███████║
+ *     ╚════╝  ╚══▀▀═╝  ╚══╝╚══╝ ╚═╝╚═════╝  ╚═════╝ ╚══════╝   ╚═╝   ╚══════╝
  *
  *    ███████╗ ██████╗ ██████╗ ███╗   ███╗
  *    ██╔════╝██╔═══██╗██╔══██╗████╗ ████║
@@ -27,26 +27,20 @@
  *    ╚██████╗╚██████╔╝██║ ╚═╝ ██║██║     ╚██████╔╝██║ ╚████║███████╗██║ ╚████║   ██║
  *     ╚═════╝ ╚═════╝ ╚═╝     ╚═╝╚═╝      ╚═════╝ ╚═╝  ╚═══╝╚══════╝╚═╝  ╚═══╝   ╚═╝
  *
- *    ███████╗ ██████╗██████╗ ██╗██████╗ ████████╗
- *    ██╔════╝██╔════╝██╔══██╗██║██╔══██╗╚══██╔══╝
- *    ███████╗██║     ██████╔╝██║██████╔╝   ██║
- *    ╚════██║██║     ██╔══██╗██║██╔═══╝    ██║
- *    ███████║╚██████╗██║  ██║██║██║        ██║
- *    ╚══════╝ ╚═════╝╚═╝  ╚═╝╚═╝╚═╝        ╚═╝
+ *    ████████╗███████╗███╗   ███╗██████╗ ██╗      █████╗ ████████╗███████╗
+ *    ╚══██╔══╝██╔════╝████╗ ████║██╔══██╗██║     ██╔══██╗╚══██╔══╝██╔════╝
+ *       ██║   █████╗  ██╔████╔██║██████╔╝██║     ███████║   ██║   █████╗
+ *       ██║   ██╔══╝  ██║╚██╔╝██║██╔═══╝ ██║     ██╔══██║   ██║   ██╔══╝
+ *       ██║   ███████╗██║ ╚═╝ ██║██║     ███████╗██║  ██║   ██║   ███████╗
+ *       ╚═╝   ╚══════╝╚═╝     ╚═╝╚═╝     ╚══════╝╚═╝  ╚═╝   ╚═╝   ╚══════╝
  *
- */
-import { Component, OnInit } from '@angular/core';
+ */ -->
+ <jqxBarGauge
+ [width]="600" [height]="600" [max]="1000"
+ [colorScheme]="'scheme02'" [values]="values">
+</jqxBarGauge>
 
-@Component({
-  selector: 'fg-basic-kendo-form',
-  templateUrl: './basic-kendo-form.component.html',
-  styleUrls: ['./basic-kendo-form.component.scss']
-})
-export class BasicKendoFormComponent implements OnInit {
-
-  constructor() { }
-
-  ngOnInit() {
-  }
-
-}
+<jqxInput [theme]="'material'"
+    [width]="200" [height]="25" [source]="countries"
+    [minLength]="1" [placeHolder]="'Enter a Country'">
+</jqxInput>
