--- a/src/app/static-resources/styles/styles.scss
+++ b/src/app/static-resources/styles/styles.scss
@@ -1,5 +1,7 @@
 @import './reset/styles.scss';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import '~jqwidgets-scripts/jqwidgets/styles/jqx.base.css';
+@import '~jqwidgets-scripts/jqwidgets/styles/jqx.material.css';
 @import './global/styles.scss';
 @import './fonts/styles.scss';
 
