--- a/src/app/static-resources/styles/styles.scss
+++ b/src/app/static-resources/styles/styles.scss
@@ -1,7 +1,6 @@
 @import './reset/styles.scss';
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
-@import '~jqwidgets-scripts/jqwidgets/styles/jqx.base.css';
-@import '~jqwidgets-scripts/jqwidgets/styles/jqx.material.css';
+@import '~@progress/kendo-theme-material/scss/all.scss';
 @import './global/styles.scss';
 @import './fonts/styles.scss';
 
