--- a/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.html
+++ b/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.html
@@ -184,6 +184,8 @@
       Please enter maximum {{ descriptionMaximumNumberOfCharacters }} characters.
     </mat-error>
   </mat-form-field>
+  <a href="https://majxrbgnmvo.angular.stackblitz.io">Press to see a selecting table</a>
 
 </form>
+
 
