--- a/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.html
+++ b/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.html
@@ -149,6 +149,53 @@
     </mat-error>
   </mat-form-field>
 
+  <!-- HOBBIES INPUT -->
+  <div class="mat-elevation-z3 list-select">
+    <table
+        mat-table
+        [dataSource]="hobbies | async">
+
+    <ng-container matColumnDef="select">
+      <th mat-header-cell *matHeaderCellDef>
+        <mat-checkbox></mat-checkbox>
+      </th>
+      <td mat-cell *matCellDef="let row">
+        <mat-checkbox></mat-checkbox>
+      </td>
+    </ng-container>
+
+      <ng-container matColumnDef="hobbies">
+        <th
+            class="hobby-label"
+            mat-header-cell
+            *matHeaderCellDef>
+          <strong>Choose your hobbies</strong>
+        </th>
+        <td
+            mat-cell
+            class="hobby-label"
+            *matCellDef="let hobby">
+          {{hobby}}
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="['select','hobbies']; sticky: true"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['select', 'hobbies'];"></tr>
+    </table>
+  </div>
+
+  <!-- TIME INPUT -->
+  <mat-form-field>
+    <input
+      matInput
+      fgRestrictInput="time"
+      placeholder="Enter the hour you was born please"
+      formControlName="time">
+    <mat-error *ngIf="userDetailsForm.get('time').invalid">
+      Your first name is required!
+    </mat-error>
+  </mat-form-field>
+
   <!-- PHONE INPUT -->
   <mat-form-field>
     <input
@@ -184,8 +231,12 @@
       Please enter maximum {{ descriptionMaximumNumberOfCharacters }} characters.
     </mat-error>
   </mat-form-field>
-  <a href="https://majxrbgnmvo.angular.stackblitz.io">Press to see a selecting table</a>
-
+ <button
+      color="primary"
+      mat-raised-button
+      (click)="onClick">
+    Submit
+  </button>
 </form>
 
 
