--- a/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.scss
+++ b/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.scss
@@ -42,3 +42,12 @@ mat-form-field {
 textarea {
   overflow: hidden !important;
 }
+
+.list-select {
+  height: 300px;
+  overflow: auto;
+}
+
+.hobby-label {
+  padding-left: 2rem;
+}
