--- a/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.html
+++ b/src/app/project-structure/root/components/basic-material-form/basic-material-form.component.html
@@ -192,7 +192,7 @@
       placeholder="Enter the hour you was born please"
       formControlName="time">
     <mat-error *ngIf="userDetailsForm.get('time').invalid">
-      Your first name is required!
+      Your born hour is required!
     </mat-error>
   </mat-form-field>
 
